--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "knex": "^0.15.2",
     "koa": "^2.5.2",
+    "koa-better-flash": "0.0.3",
     "koa-body": "^4.0.4",
     "koa-bodyparser": "^4.2.1",
     "koa-passport": "^4.1.1",
